Fixed oversights in install and validate scripts.
* Fixed a misspelt `bundle` command.
* Dropped the databases before installation to avoid conflicts
  with prior setups.
* Updated the schema and Gemfile.lock for puller.
* Updated the Windows-specific instructions in the README.

--- a/install
+++ b/install
@@ -106,6 +106,7 @@ echo
 echo -e "${bold}Installing the Heatwave rails application...${NC}"
 cd "$RAILS_HOME"
 bundle install --path vendor || exit
+bundle exec rake db:drop || exit
 bundle exec rake db:migrate || exit
 bundle exec rake db:create || exit
 echo
@@ -116,6 +117,7 @@ echo -e "${bold}Installing the Heatwave data puller...${NC}"
 cd "$PULLER_HOME"
 bundle install --path vendor || exit
 bundle exec rake install || exit
+bundle exec rake db:drop || exit
 bundle exec rake db:migrate || exit
 bundle exec rake db:create || exit
 echo
