--- a/heatwave/README.rdoc
+++ b/heatwave/README.rdoc
@@ -21,7 +21,9 @@ Things you may want to cover:
 
 * Deployment instructions
 
-* ...
+* Base URL for messenger
+	In HeatWave-Orange\messenger\lib\messenger\joiner.rb
+	Edit the constant ROOT_URL as the base URL of your domain
 
 
 Please feel free to use a different markup language if you do not plan to run
