Added the initial administrator account.
* Added the database seed file, creating an administrator account,
  a location record for the Melbourne Regional Office,
  and an example deactivated rule.
* Updated the install script to add the aforementioned data to the
  database.
* Updated the README to introduce the seeded data.

--- a/install
+++ b/install
@@ -108,6 +108,7 @@ cd "$RAILS_HOME"
 bundle install --path ../vendor || exit
 bundle exec rake db:migrate:reset || exit
 RAILS_ENV=production bundle exec rake db:migrate:reset || exit
+RAILS_ENV=production bundle exec rake db:seed || exit
 echo
 echo -e "${bold}Heatwave rails application installed.${NC}"
 
