--- a/install
+++ b/install
@@ -10,18 +10,18 @@ echo -e "${bold}Installing Ruby, Sqlite3, and Node.js...${NC}"
 
 if `command -v yum 2>&1 >/dev/null`; then
     echo '... using yum'
-    sudo yum install ruby || exit
-    sudo yum install rubygems || exit
-    sudo yum install sqlite || exit
-    sudo curl --silent --location https://rpm.nodesource.com/setup | sudo bash - || exit
-    sudo yum -y install nodejs || exit
+    sudo yum install ruby || exit -1
+    sudo yum install rubygems || exit -1
+    sudo yum install sqlite || exit -1
+    sudo curl --silent --location https://rpm.nodesource.com/setup | sudo bash - || exit -1
+    sudo yum -y install nodejs || exit -1
 elif `command -v pacman 2>&1 >/dev/null`; then
     echo '... using pacman'
     if `command -v sudo 2>&1 >/dev/null`; then
         echo '... using sudo'
-        sudo pacman -S ruby || exit
-        sudo pacman -S sqlite || exit
-        sudo pacman -S nodejs || exit
+        sudo pacman -S ruby || exit -1
+        sudo pacman -S sqlite || exit -1
+        sudo pacman -S nodejs || exit -1
     else
         echo '... not using sudo'
         if [[ -n "$WD" ]]; then
@@ -33,7 +33,7 @@ ${error}You seem to be using windows.
 Please install Ruby using RubyInstaller from http://rubyinstaller.org
 as per the instructions in the project README.${NC}\
 "
-                exit
+                exit -1
             fi
             if `command -v node 2>&1 >/dev/null`; then
                 echo -e "${info}Windows Node.js installation detected${NC}"
@@ -43,27 +43,27 @@ ${error}You seem to be using windows.
 Please install Node.js using the installer from https://nodejs.org/
 as per the instructions in the project README.${NC}\
 "
-                exit
+                exit -1
             fi
         else
-            pacman -S ruby || exit
-            pacman -S nodejs || exit
+            pacman -S ruby || exit -1
+            pacman -S nodejs || exit -1
         fi
-        pacman -S sqlite || exit
+        pacman -S sqlite || exit -1
     fi
 elif `command -v apt-get 2>&1 >/dev/null`; then
     echo -e '... using apt-get'
-    sudo apt-get install ruby || exit
-    sudo apt-get install sqlite || exit
-    curl --silent --location https://deb.nodesource.com/setup_0.12 | sudo bash - || exit
-    sudo apt-get install nodejs || exit
+    sudo apt-get install ruby || exit -1
+    sudo apt-get install sqlite || exit -1
+    curl --silent --location https://deb.nodesource.com/setup_0.12 | sudo bash - || exit -1
+    sudo apt-get install nodejs || exit -1
 else
     echo "${error}\
 This application depends on the presence of yum, pacman, or apt-get.
 If a suitable alternative package manager is available, please examine
 this script and edit it to use the alternative.${NC}\
 "
-    exit
+    exit -1
 fi
 
 echo
@@ -82,7 +82,7 @@ fi
 
 echo
 echo -e "${bold}Installing bundle${NC}"
-gem install bundle || exit
+gem install bundle || exit -1
 echo
 echo -e "${bold}bundle installed.${NC}"
 
@@ -121,35 +121,35 @@ echo -e "${info}SENDER_HOME=${SENDER_HOME}${NC}"
 echo
 echo -e "${bold}Installing the Heatwave rails application...${NC}"
 cd "$RAILS_HOME"
-bundle install --path ../vendor || exit
-bundle exec rake db:migrate:reset || exit
-RAILS_ENV=production bundle exec rake db:migrate:reset || exit
-RAILS_ENV=production bundle exec rake db:seed || exit
+bundle install --path ../vendor || exit -1
+bundle exec rake db:migrate:reset || exit -1
+RAILS_ENV=production bundle exec rake db:migrate:reset || exit -1
+RAILS_ENV=production bundle exec rake db:seed || exit -1
 echo
 echo -e "${bold}Heatwave rails application installed.${NC}"
 
 echo
 echo -e "${bold}Installing the Heatwave data puller...${NC}"
 cd "$PULLER_HOME"
-bundle install --path ../vendor || exit
-bundle exec rake install || exit
-bundle exec rake db:migrate:reset || exit
+bundle install --path ../vendor || exit -1
+bundle exec rake install || exit -1
+bundle exec rake db:migrate:reset || exit -1
 echo
 echo -e "${bold}Heatwave data puller installed.${NC}"
 
 echo
 echo -e "${bold}Installing the Heatwave SMS sender...${NC}"
 cd "$SENDER_HOME"
-bundle install --path ../vendor || exit
-bundle exec rake install || exit
+bundle install --path ../vendor || exit -1
+bundle exec rake install || exit -1
 echo
 echo -e "${bold}Heatwave SMS sender installed.${NC}"
 
 echo
 echo -e "${bold}Installing the Heatwave messenger...${NC}"
 cd "$MESSENGER_HOME"
-bundle install --path ../vendor || exit
-bundle exec rake install || exit
-bundle exec rake db:migrate:reset || exit
+bundle install --path ../vendor || exit -1
+bundle exec rake install || exit -1
+bundle exec rake db:migrate:reset || exit -1
 echo
 echo -e "${bold}Heatwave messenger installed.${NC}"
